# Jinxy

./: .gitignore  CMakeLists.txt  grammar.txt  main.cpp
src/: CMakeLists.txt
src/ast/: CMakeLists.txt
src/ast/include/jinxy/ast/: ASTBinaryExpression.h  ASTIdentifier.h  ASTNumericLiteral.h  ASTOperator.h  ASTVariableDeclaration.h  Expression.h  Node.h
src/ast/src/: ASTBinaryExpression.cpp  ASTIdentifier.cpp  ASTNumericLiteral.cpp  ASTOperator.cpp  ASTVariableDeclaration.cpp
src/lexer/: CMakeLists.txt
src/lexer/include/jinxy/lexer/: Lexer.h  Token.h
src/lexer/src/: Lexer.cpp  Token.cpp
src/parser/: CMakeLists.txt
src/parser/include/jinxy/parser/: Parser.h
src/parser/src/: Parser.cpp
